--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -7,8 +7,17 @@ on:
                 required: false
                 default: dist
                 type: string
+        outputs:
+            result:
+                description: Result of the deployment operation
+                value: ${{ jobs.deploy.outputs.outcome }}
+    # secrets:
+    #     some-secret:
+    #         required: true
 jobs:
     deploy:
+        outputs:
+            outcome: ${{ steps.set-result.outputs.step-result }}
         runs-on: ubuntu-latest
         steps:
             - name: Get code
@@ -19,3 +28,6 @@ jobs:
               run: ls
             - name: Ouptput information
               run: echo "Deploying and uploading ...
+            - name: Set result output
+              id: set-result
+              run: echo "step-result=success" >> $GITHUB_OUTPUT"
